--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,11 +111,13 @@
           <ul id="sections" class="nav navbar-nav">
             <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
-            <li><a href="{{ site.baseurl }}/faq.html">[FAQs:remove?]</a></li>
-            <li><a href="{{ site.baseurl }}/es/index.html">{Español:remove?]</a></li>
+            <li><a href="{{ site.baseurl }}/faq.html">FAQs</a></li>
+            <!-- add the spanish link back once we have a full translation
+            <li><a href="{{ site.baseurl }}/es/index.html">Español</a></li>
+            -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="pull-right"><a href="{{ site.baseurl }}/legalaid.html">FREE LEGAL HELP!</a></li>
+            <li class="pull-right"><a href="{{ site.baseurl }}//applying.html">FREE LEGAL HELP!</a></li>
           </ul>
         </div>
       </div>
