--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,7 @@
             -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="pull-right"><a href="{{ site.baseurl }}//applying.html">FREE LEGAL HELP!</a></li>
+            <li class="pull-right"><a href="{{ site.baseurl }}/applying.html">FREE LEGAL HELP!</a></li>
           </ul>
         </div>
       </div>
