--- a/css/custom.css
+++ b/css/custom.css
@@ -29,7 +29,8 @@ a:hover, a:active{
 }
 
 .nav > li > a {
-  padding: 16px 10px;
+  padding: 4px 10px;
+  border: 10px;
 }
 
 .brand {
@@ -62,7 +63,7 @@ a:hover, a:active{
 
 /* phones */
 @media only screen and (max-width : 480px) {
-  h1, h2{
+  h1, h2{
     font-size: 1.8em;
   }
   .smaller{
