--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,6 +112,7 @@
             <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             <li><a href="{{ site.baseurl }}/faq.html">FAQs</a></li>
+            <li>/images/ErasURecord.png</li>
             <!-- add the spanish link back once we have a full translation
             <li><a href="{{ site.baseurl }}/es/index.html">Español</a></li>
             -->
