--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,7 +113,7 @@
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             <li><a href="{{ site.baseurl }}/faq.html">FAQs</a></li>
             <li>image: feature: ErasURecord.png)</li>
-            <li>({{ site.baseurl }}/images/ErasURecord.png)</li>
+            <li>({{ site.baseurl }}/images/ErasURecord.png)imgfeat</li>
             
    
             <!-- add the spanish link back once we have a full translation
