--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,10 +112,13 @@
             <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             <li><a href="{{ site.baseurl }}/faq.html">FAQs</a></li>
-            <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
-            <!-- add the spanish link back once we have a full translation
+            <!-- <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
+            add the spanish link back once we have a full translation
             <li><a href="{{ site.baseurl }}/es/index.html">Español</a></li>
             -->
+          </ul>
+          <ul class="nav navbar-nav navbar-center">
+            <li class="center-block"><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="pull-right"><a href="{{ site.baseurl }}/applying.html">FREE LEGAL HELP!</a></li>
