--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
             -->
           </ul>
           <ul class="nav navbar-nav navbar-center">
-            <li class="center-block"><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
+            <li class="center-block" style=width:107px;"><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="pull-right"><a href="{{ site.baseurl }}/applying.html">FREE LEGAL HELP!</a></li>
