--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,8 +117,8 @@
             <li><a href="{{ site.baseurl }}/es/index.html">Español</a></li>
             -->
           </ul>
-          <ul class="nav navbar-nav navbar-center">
-            <li class="center-block" style=width:107px;"><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
+          <ul class="nav nav-justified">
+            <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="pull-right"><a href="{{ site.baseurl }}/applying.html">FREE LEGAL HELP!</a></li>
