--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,7 @@
             <li><a href="{{ site.baseurl }}/es/index.html">Español</a></li>
             -->
           </ul>
-          <ul class="nav nav-justified">
+          <ul id="pic" class="nav nav-justified">
             <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
