--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,6 +117,7 @@
             <li><a href="{{ site.baseurl }}/es/index.html">Español</a></li>
             -->
           </ul>
+          <a class="navbar-brand" href="#">Brand</a>
           <ul id="pic" class="nav nav-justified">
             <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
           </ul>
