--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,6 +126,14 @@
           </ul>
         </div>
       </div>
+      
+      <div class="navbar-collapse collapse">
+    <ul class="nav nav-justified">
+        <li><a href="#">home</a></li>
+        <li><a href="#about">about</a></li>
+    </ul>
+  </div>
+  
     </nav>
 
     <div class='container-fluid'>
