--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,28 +112,16 @@
             <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             <li><a href="{{ site.baseurl }}/faq.html">FAQs</a></li>
-            <!-- <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
-            add the spanish link back once we have a full translation
+            <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
+             <!-- add the spanish link back once we have a full translation
             <li><a href="{{ site.baseurl }}/es/index.html">Español</a></li>
             -->
-          </ul>
-          <a class="navbar-brand" href="#">Brand</a>
-          <ul id="pic" class="nav nav-justified">
-            <li><img src="{{ site.baseurl }}/images/ErasURecord.png"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="pull-right"><a href="{{ site.baseurl }}/applying.html">FREE LEGAL HELP!</a></li>
           </ul>
         </div>
       </div>
-      
-      <div class="navbar-collapse collapse">
-    <ul class="nav nav-justified">
-        <li><a href="#">home</a></li>
-        <li><a href="#about">about</a></li>
-    </ul>
-  </div>
-  
     </nav>
 
     <div class='container-fluid'>
