--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,6 +130,13 @@
 
     </div>
     
+    <div class='pagefooter'>
+          
+          <p>Use of this webpage constitutes acceptance of the Privacy Policy</p>
+
+    </div>
+    
+    
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
