--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -127,6 +127,8 @@
     <div class='container-fluid'>
           
           {{content}}
+          <br>
+          <p>insideUse of this webpage constitutes acceptance of the Privacy Policy</p>
 
     </div>
     
