--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,7 @@ layout: default
 <div class='row'>
   <div class='col-sm-10 col-sm-offset-1'>
     {{content}}
+    <br>
+    <p>page.html Use of this webpage constitutes acceptance of the Privacy Policy</p>
   </div>
 </div>
