--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,8 @@ layout: default
   <div class='col-sm-10 col-sm-offset-1'>
     {{content}}
     <br><br><br>
-    <p>Use of this webpage constitutes acceptance of the <a href="{{ site.baseurl }}/privacy.html">Privacy Policy (click here)</a> and the <a href="{{ site.baseurl }}/terms.html">Terms of Use (click here)</a>.  In particular: the contents of this website are general and only for informational purposes. The information on this web site is under no circumstance meant to substitute for the advice that an attorney or law firm can provide to an individual with a specific legal problem. Your use of this site does not create any attorney-client relationship.</p>
+    ---
+    ___
+    <h6>Use of this webpage constitutes acceptance of the <a href="{{ site.baseurl }}/privacy.html">Privacy Policy (click here)</a> and the <a href="{{ site.baseurl }}/terms.html">Terms of Use (click here)</a>.  In particular: the contents of this website are general and only for informational purposes. The information on this web site is under no circumstance meant to substitute for the advice that an attorney or law firm can provide to an individual with a specific legal problem. Your use of this site does not create any attorney-client relationship.</h6>
   </div>
 </div>
