--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
 
-          <a id="logo" class="navbar-brand brand" href="{{ site.baseurl }}/" style="background: transparent url('{{ site.baseurl }}/images/logo.png') no-repeat scroll 0px 0px / 100% auto;">Expunge.io</a>
+          <a id="logo" class="navbar-brand brand" href="{{ site.baseurl }}/" style="background: transparent url('{{ site.baseurl }}/images/logo.png') no-repeat scroll 0px 0px / 100% auto;">ErasURecord.ctlegal.org</a>
 
         </div>
         <div id="navbar">
